--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -11,4 +11,4 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip install -r requirements.txt
-          python train.py 
+          python KNN.py
